Fixing post issue

--- a/beehiveKaris/index.html
+++ b/beehiveKaris/index.html
@@ -23,6 +23,7 @@
     <script src="js/components/beesComponent.js"></script>
     <script src="js/components/commentComponent.js"></script>
     <script src="js/components/commentFormComponent.js"></script>
+    <script src="js/components/postFormComponent.js"></script>
     <script src="js/components/postsComponent.js"></script>
     <script src="js/components/postComponent.js"></script>
     <script src="js/components/toDosComponent.js"></script>
